<?xml version="1.0"?>
<package format="3">
  <name>jury_dashboard</name>
  <version>0.1.0</version>

  <description>
    Read-only web dashboard for FRE 2026 Task 2 and Task 3 jury information.
  </description>

  <maintainer email="tzimmerman@stud.hs-heilbronn.de">
    Timo Zimmermann
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
