<?xml version="1.0"?>
<package format="3">
  <name>web_teleop</name>
  <version>0.0.1</version>
  <description>Web Teleop publishing Twist to /cmd_vel and controlling FRE2026 task navigation.</description>

  <maintainer email="tzimmerman@stud.hs-heilbronn.de">Timo Zimmermann</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>cmd_vel_selector</depend>
  <depend>fre2026_tasks_interfaces</depend>
  <depend>slam_toolbox</depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
